--- a/app/src/main/res/drawable/bg_badge_high.xml
+++ b/app/src/main/res/drawable/bg_badge_high.xml
@@ -2,17 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="6dp" />
+    <corners android:radius="10dp" />
 
-    <solid android:color="#020617" />
-
-    <stroke
-        android:width="1dp"
-        android:color="#1F2937" />
+    <solid android:color="#EF4444" />
 
     <padding
         android:left="14dp"
         android:right="14dp"
-        android:top="14dp"
-        android:bottom="14dp" />
+        android:top="6dp"
+        android:bottom="6dp" />
 </shape>
