--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/card_background"/>
-    <corners android:radius="@dimen/corner_radius"/>
-    <stroke android:width="1dp" android:color="@color/border_color"/>
-    <padding
-        android:left="@dimen/padding_medium"
-        android:top="@dimen/padding_medium"
-        android:right="@dimen/padding_medium"
-        android:bottom="@dimen/padding_medium"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="16dp" />
+    <gradient
+        android:type="linear"
+        android:angle="135"
+        android:startColor="#F20F172A"
+        android:endColor="#FA0F172A" />
+    <stroke
+        android:width="1dp"
+        android:color="#2E94A3B8" />
 </shape>
