--- a/app/src/main/res/layout/activity_lista_bugs.xml
+++ b/app/src/main/res/layout/activity_lista_bugs.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
+    android:background="@drawable/app_background"
     android:padding="24dp">
 
     <!-- Header -->
@@ -19,17 +19,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <ImageView
-        android:id="@+id/imgBugIconLista"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@mipmap/ic_launcher"
-        android:contentDescription="Bug Icon"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/btnVolver"
-        app:layout_constraintBottom_toBottomOf="@id/btnVolver"
-        app:layout_constraintStart_toEndOf="@id/btnVolver"/>
-
     <TextView
         android:id="@+id/tvTituloLista"
         android:layout_width="0dp"
@@ -38,8 +27,8 @@
         android:textColor="@color/text_primary"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/imgBugIconLista"
+        android:layout_marginStart="12dp"
+        app:layout_constraintStart_toEndOf="@id/btnVolver"
         app:layout_constraintTop_toTopOf="@id/btnVolver"
         app:layout_constraintBottom_toBottomOf="@id/btnVolver"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -49,6 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
+        android:background="@android:color/transparent"
         app:layout_constraintTop_toBottomOf="@id/btnVolver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +48,8 @@
             android:id="@+id/containerBugs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            android:background="@android:color/transparent" />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
