--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Base.Theme.BugLog" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowBackground">@drawable/app_background</item>
+        <item name="android:colorBackground">@android:color/transparent</item>
         <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button.TextButton</item>
     </style>
 
