--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,17 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Border Radius -->
+    <dimen name="radius_sm">6dp</dimen>
+    <dimen name="radius_md">10dp</dimen>
+    <dimen name="radius_lg">16dp</dimen>
+    <dimen name="radius_xl">20dp</dimen>
+    <dimen name="radius_pill">999dp</dimen>
 
-    <dimen name="margin_small">8dp</dimen>
+    <!-- Spacing -->
+    <dimen name="space_xs">6dp</dimen>
+    <dimen name="space_sm">10dp</dimen>
+    <dimen name="space_md">16dp</dimen>
+    <dimen name="space_lg">24dp</dimen>
+    <dimen name="space_xl">32dp</dimen>
+    <dimen name="space_xxl">40dp</dimen>
+
+    <!-- Padding -->
+    <dimen name="padding_input">14dp</dimen>
+    <dimen name="padding_button">14dp</dimen>
+    <dimen name="padding_card">24dp</dimen>
+    <dimen name="padding_badge">12dp</dimen>
+
+    <!-- Font Sizes -->
+    <dimen name="text_xs">12sp</dimen>
+    <dimen name="text_sm">13sp</dimen>
+    <dimen name="text_base">14sp</dimen>
+    <dimen name="text_md">16sp</dimen>
+    <dimen name="text_lg">18sp</dimen>
+    <dimen name="text_xl">24sp</dimen>
+    <dimen name="text_xxl">28sp</dimen>
+
+    <!-- Icon Sizes -->
+    <dimen name="icon_sm">24dp</dimen>
+    <dimen name="icon_md">32dp</dimen>
+    <dimen name="icon_lg">48dp</dimen>
+
+    <!-- Elevations (para sombras en CardView) -->
+    <dimen name="elevation_sm">4dp</dimen>
+    <dimen name="elevation_md">8dp</dimen>
+    <dimen name="elevation_lg">16dp</dimen>
+    <dimen name="elevation_xl">24dp</dimen>
+
+    <!-- Borders -->
+    <dimen name="border_width">1dp</dimen>
+    <dimen name="border_width_thick">2dp</dimen>
+
+    <!-- Navbar -->
+    <dimen name="navbar_height">64dp</dimen>
+    <dimen name="navbar_padding">12dp</dimen>
+
+    <!-- Card sizes -->
+    <dimen name="card_max_width">700dp</dimen>
+    <dimen name="card_login_max_width">420dp</dimen>
+
+    <dimen name="button_height">48dp</dimen>
+    <dimen name="padding_small">8dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
 
-    <dimen name="padding_small">8dp</dimen>
-    <dimen name="padding_medium">16dp</dimen>
-
-    <dimen name="text_size_title">20sp</dimen>
-
-    <dimen name="input_height">48dp</dimen>
-    <dimen name="input_height_large">96dp</dimen>
-    <dimen name="button_height">48dp</dimen>
-
-    <dimen name="corner_radius">8dp</dimen>
 </resources>
