--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Base.Theme.BugLog" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- fondo global -->
+        <item name="android:windowBackground">@drawable/app_background</item>
+
+        <!-- Para que los layouts no pongan color por defecto -->
+        <item name="android:colorBackground">@android:color/transparent</item>
+
         <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button.TextButton</item>
     </style>
 
